# api-reflector

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose-local.yml  pyproject.toml  settings.py  wsgi.py
.github/workflows/: build.yml  main.yml  publish.yml  tests.yaml
alembic/: env.py
alembic/versions/: 0894d668a7b8_.py  106bfde224ec_adding_tags_and_link_table.py  2a1b1ddb98f3_test.py  6e3e075b2257_make_active_field_non_nullable.py  7b4efa0dd5ea_initial.py  836e9fb3e939_add_is_active_column.py  ab3e47fb856c_initial_revision.py  d49d1b115d31_test.py  e9a5828830a8_add_active_field.py
api_reflector/: action.py  actions.py  admin.py  api.py  auth.py  db.py  debugger.py  endpoint.py  models.py  reporting.py  rule.py  rules_engine.py  slugify.py  storage.py  templating.py  views.py
api_reflector/migrations/: env.py  run_migrations.py
api_reflector/migrations/versions/: 76feeb81949a_callback_action.py  7b4efa0dd5ea_initial.py  bf9a283876e7_.py  d42bddfac4f1_.py  f0be9a5e8cec_storage.py
api_reflector/static/: filter.js
api_reflector/templates/: base.html  debugger.html  home.html
api_reflector/templates/admin/: index.html
deploy/kube/: deployment.yaml  service.yaml
scripts/: _common  bootstrap  cibuild  format  lint  migrate  server  test
tests/: test_rules_engine.py
